--- a/.github/workflows/deploy-node.yml
+++ b/.github/workflows/deploy-node.yml
@@ -38,16 +38,14 @@ jobs:
           docker push $DOCKERHUB_USERNAME/node-service:latest
           echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
 
-      # Step 5: Deploy New Image to AWS ECS
-      # - name: Deploy to AWS ECS
-      #   env:
-      #     AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      #     AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      #     AWS_REGION: ${{ secrets.AWS_REGION }}
-      #     ECS_CLUSTER_NAME: ${{ secrets.ECS_CLUSTER_NAME }}
-      #     ECS_SERVICE_NAME: ${{ secrets.ECS_SERVICE_NAME }}
-      #   run: |
-      #     aws ecs update-service \
-      #       --cluster $ECS_CLUSTER_NAME \
-      #       --service $ECS_SERVICE_NAME \
-      #       --force-new-deployment
+      - name: Configure AWS CLI
+        run: |
+          aws configure set aws_access_key_id ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws configure set region eu-north-1  # Change this to your AWS region
+
+      - name: Force ECS Deployment with New Image
+        run: |
+          aws ecs update-service --cluster programingAutograderNode \
+          --service programingNodeService \
+          --force-new-deployment
