--- a/.github/workflows/deploy-node.yml
+++ b/.github/workflows/deploy-node.yml
@@ -56,8 +56,11 @@ jobs:
       # Step 8: Update Existing Task Definition with New Image
       - name: Update ECS Task Definition with Latest Image
         run: |
-          TASK_DEFINITION_ARN=$(aws ecs describe-task-definition --task-definition programingNodeService --query 'taskDefinition.taskDefinitionArn' --output text)
-          UPDATED_TASK_DEF=$(aws ecs describe-task-definition --task-definition programingNodeService --query 'taskDefinition' | jq --arg IMAGE "$DOCKERHUB_USERNAME/node-service:$IMAGE_TAG" '.containerDefinitions[0].image = $IMAGE')
+          TASK_DEFINITION_NAME="programingNode"  # Updated to match your task definition
+          TASK_DEFINITION_ARN=$(aws ecs describe-task-definition --task-definition $TASK_DEFINITION_NAME --query 'taskDefinition.taskDefinitionArn' --output text)
+
+          UPDATED_TASK_DEF=$(aws ecs describe-task-definition --task-definition $TASK_DEFINITION_NAME --query 'taskDefinition' | jq --arg IMAGE "$DOCKERHUB_USERNAME/node-service:$IMAGE_TAG" '.containerDefinitions[0].image = $IMAGE')
+
           echo "$UPDATED_TASK_DEF" > updated-task-def.json
           aws ecs register-task-definition --cli-input-json file://updated-task-def.json
 
